--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,4 @@ services:
       POSTGRES_DB: default
     volumes:
       - ./db_data:/var/lib/postgresql/data
+    command: postgres -c listen_addresses='*'
